# collider-rs

./: Cargo.toml  README.md
src/: float.rs  geom_ext.rs  index_rect.rs  lib.rs  tests.rs  util.rs
src/core/: collider.rs  events.rs  grid.rs  mod.rs  solvers.rs
src/core/collider/: event_manager.rs  mod.rs
src/core/dur_hitbox/: mod.rs  solvers.rs
src/geom/: card.rs  mod.rs  vec.rs
src/geom/shape/: mod.rs  normals.rs  tests.rs
