[package]
name = "collider"
version = "0.3.1"
authors = ["Matthew Michelotti <matthew@matthewmichelotti.com>"]
description = "A library for continuous 2D collision detection for game developement"
documentation = "https://docs.rs/collider/"
homepage = "http://www.matthewmichelotti.com/projects/collider/"
repository = "https://github.com/SergiusIW/collider-rs"
readme = "README.md"
keywords = ["collision", "geometry", "continuous", "2D", "game"]
license = "Apache-2.0"

[dependencies]
fnv = "^1.0.3"
